# SciLib

./: .env.example  .gitignore  AGENTS.md  Caddyfile  Makefile  README.md  SPEC.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  collections.py  external.py  groups.py  items.py  search.py  tags.py  users.py
backend/app/models/: __init__.py
backend/app/services/citations/: __init__.py
backend/app/services/crossref/: __init__.py
backend/app/services/embeddings/: __init__.py
backend/app/services/grobid/: __init__.py
backend/app/workers/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CollectionTree.tsx  DocumentCard.tsx  FileUploadZone.tsx
frontend/src/hooks/: useAuth.ts  useCollections.ts  useItems.ts  useSearch.ts
frontend/src/lib/: utils.ts
frontend/src/mocks/: handlers.ts
frontend/src/pages/: AdminPage.tsx  GroupsPage.tsx  HomePage.tsx  LibraryPage.tsx  LoginPage.tsx  SearchPage.tsx
frontend/src/store/: authStore.ts  uiStore.ts
frontend/src/types/: api.ts
frontend/tests/: setup.ts
frontend/tests/e2e/: auth.spec.ts  library.spec.ts
frontend/tests/mocks/: handlers.ts
(+7 files in other folders)
